third_party/rust/indoc/v1/crate/tests/ui/printdoc-no-arg.stderr
error: 1 positional argument in format string, but no arguments were given
 --> $DIR/printdoc-no-arg.rs:4:16
  |
4 |     printdoc!("{}");
  |                ^^
